# ReactFastAPI

./: .gitignore  .pylintrc  README.md
Backend/: .python-version  alembic.ini  main.py  pyproject.toml
Backend/app/api/: __init__.py
Backend/app/api/v1/: __init__.py  user.py
Backend/app/choice/: user.py
Backend/app/database/transaction/: middleware.py  session.py  utils.py
Backend/app/database/versions/: 846e486353f0_user_table.py
Backend/app/entity/: user.py
Backend/app/middleware/: database.py  security.py
Backend/app/repository/: user.py
Backend/app/schema/: security.py  user.py
Backend/app/services/: __init__.py  token.py  user.py
Backend/database/: env.py
Backend/database/transaction/: __init__.py  _session.py  middleware.py  utils.py
Backend/database/versions/: 846e486353f0_user_table.py
Frontend/: .eslintrc.cjs  package-lock.json  package.json
Frontend/src/: App.css  App.tsx
Frontend/src/components/: LoginCard.tsx  LoginCardStyled.tsx  NavBar.tsx  NavBarStyled.tsx  SideNavStyled.tsx
Frontend/src/components/layouts/: NavBarStyled.tsx  SideNav.tsx  SideNavStyled.tsx
