[tool.poetry]
name = "reactfastapi"
version = "0.1.0"
description = "For study FastAPI and React"
authors = ["KaniKim <kkh5428@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.110.1"}
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
asyncpg = "^0.29.0"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
